<resources>
  <string name="app_name">c:geo</string>
  <string name="app_name_compass">c:geo compass</string>
  <string name="cache">Cache</string>
  <string name="detail">Details</string>
  <string name="search">Search</string>
  <string name="settings">Settings</string>
  <string name="helpers">Useful apps</string>
  <string name="about">About c:geo</string>
  <string name="helper">Do you want to learn about <b>c:geo</b>?\nCheck our easy to read manual.</string>
  <string name="latitude">Latitude</string>
  <string name="longitude">Longitude</string>
  <string name="action_bar_share_title">Share link to cache</string>
  <string name="all_types">All Cache Types</string>
  <string name="traditional">Traditional Cache</string>
  <string name="multi">Multi-cache</string>
  <string name="mystery">Mystery Cache</string>
  <string name="letterbox">Letterbox Hybrid</string>
  <string name="event">Event Cache</string>
  <string name="mega">Mega-Event Cache</string>
  <string name="earth">Earthcache</string>
  <string name="cito">Cache In Trash Out Event</string>
  <string name="webcam">Webcam Cache</string>
  <string name="virtual">Virtual Cache</string>
  <string name="wherigo">Wherigo Cache</string>
  <string name="lostfound">Lost &amp; Found Event Cache</string>
  <string name="ape">Project APE Cache</string>
  <string name="gchq">Groundspeak HQ</string>
  <string name="gps">GPS Adventures Exhibit</string>
  <string name="unknown">Unknown Type</string>
  <string name="cache_size_micro">Micro</string>
  <string name="cache_size_small">Small</string>
  <string name="cache_size_regular">Regular</string>
  <string name="cache_size_large">Large</string>
  <string name="cache_size_other">Other</string>
  <string name="cache_size_virtual">Virtual</string>
  <string name="cache_size_notchosen">Not chosen</string>
  <string name="cache_size_unknown">Unknown</string>
  <string name="wp_final">Final Location</string>
  <string name="wp_stage">Stage of a Multicache</string>
  <string name="wp_puzzle">Question to Answer</string>
  <string name="wp_pkg">Parking Area</string>
  <string name="wp_trailhead">Trailhead</string>
  <string name="wp_waypoint">Reference Point</string>
  <string name="log_found">Found it</string>
  <string name="log_dnf">Didn\'t find it</string>
  <string name="log_note">Write note</string>
  <string name="log_published">Published</string>
  <string name="log_enabled">Enabled</string>
  <string name="log_disabled">Disabled</string>
  <string name="log_attend">Will Attend</string>
  <string name="log_attended">Attended</string>
  <string name="log_retrieved">Retrieved</string>
  <string name="log_placed">Placed</string>
  <string name="log_grabbed">Grabbed Somewhere</string>
  <string name="log_movecollection">Move to Collection</string>
  <string name="log_moveinventory">Move to Inventory</string>
  <string name="log_maintained">Maintenance Performed</string>
  <string name="log_maintenance_needed">Needs Maintenance</string>
  <string name="log_update">Updated Coordinates</string>
  <string name="log_archived">Archived</string>
  <string name="log_needs_archived">Needs Archived</string>
  <string name="log_discovered">Discovered</string>
  <string name="log_reviewed">Reviewer Note</string>
  <string name="log_tb_nothing">Do Nothing</string>
  <string name="log_tb_visit">Visited</string>
  <string name="log_tb_drop">Dropped Off</string>
  <string name="log_tb_changeall">Change All</string>
  <string name="log_save">Save</string>
  <string name="log_saving">Sending log…</string>
  <string name="log_clear">Clear</string>
  <string name="log_post">Submit Log</string>
  <string name="log_post_rate">Submit Log &amp; Rate</string>
  <string name="log_post_no_rate">Submit Log &amp; Do not Rate</string>
  <string name="log_post_not_possible">Loading Log Page…</string>
  <string name="log_add">Add</string>
  <string name="log_date">Date</string>
  <string name="log_time">Time</string>
  <string name="log_date_time">Date &amp; Time</string>
  <string name="log_rating">Rating</string>
  <string name="log_no_rating">No rating</string>
  <string name="log_stars_1">1 Star</string>
  <string name="log_stars_15">1.5 Stars</string>
  <string name="log_stars_2">2 Stars</string>
  <string name="log_stars_25">2.5 Stars</string>
  <string name="log_stars_3">3 Stars</string>
  <string name="log_stars_35">3.5 Stars</string>
  <string name="log_stars_4">4 Stars</string>
  <string name="log_stars_45">4.5 Stars</string>
  <string name="log_stars_5">5 Stars</string>
  <string name="log_stars_1_description">Poor</string>
  <string name="log_stars_15_description">Fairly poor</string>
  <string name="log_stars_2_description">Below average</string>
  <string name="log_stars_25_description">Not so bad</string>
  <string name="log_stars_3_description">Average</string>
  <string name="log_stars_35_description">Not bad at all</string>
  <string name="log_stars_4_description">Better than average</string>
  <string name="log_stars_45_description">Very good</string>
  <string name="log_stars_5_description">Awesome</string>
  <string name="log_webcam">Webcam Photo Taken</string>
  <string name="log_new_log">Log</string>
  <string name="log_new_log_text">Log Text</string>
  <string name="log_announcement">Announcement</string>
  <string name="log_today">Today</string>
  <string name="log_yesterday">Yesterday</string>
  <string name="translate_to_sys_lang">Translate to %s</string>
  <string name="translate_to_english">Translate to English</string>
  <string name="translate_length_warning">Translate may fail with large amounts of text.</string>
  <string name="err_none">OK</string>
  <string name="err_start">Communication not started</string>
  <string name="err_parse">Failed Login page parsing</string>
  <string name="err_server">Unable to contact Geocaching.com. The website may be down or your Internet connection not working.</string>
  <string name="err_login">No Login information stored</string>
  <string name="err_login_failed">c:geo can\'t log in.</string>
  <string name="err_login_failed_toast">c:geo can\'t log in. c:geo works offline with Stored caches. Check your Login settings or enable Internet connection.</string>
  <string name="err_unknown">Unknown error</string>
  <string name="err_comm">Unknown communication error</string>
  <string name="err_missing_auth">No username and/or password set.</string>
  <string name="err_wrong">Login information incorrect</string>
  <string name="err_maintenance">Geocaching.com is down for maintenance. c:geo works offline with Stored caches.</string>
  <string name="err_license">You have not agreed to Geocaching.com license agreement, so c:geo can\'t load cache coordinates.</string>
  <string name="err_unpublished">The requested cache is unpublished.</string>
  <string name="err_premium_only">This Cache is only available to Geocaching.com Premium Members.</string>
  <string name="err_store">c:geo can\'t store the cache.</string>
  <string name="err_drop">c:geo can\'t drop cache.</string>
  <string name="err_detail_open">c:geo can\'t open geocache details.</string>
  <string name="about_changelog">Changelog</string>
  <string name="about_donate">Donate</string>
  <string name="about_detail">Details</string>
  <string name="about_donation_more">Donate\ndevelopment</string>
  <string name="about_contributors">Contributors</string>
  <string name="quote">To make geocaching easier, to make users lazier.</string>
  <string name="powered_by">carnero</string>
  <string name="support">Support: <a href="mailto:support@cgeo.org">support@cgeo.org</a></string>
  <string name="website">Website: <a href="http://cgeo.org/">cgeo.org</a></string>
  <string name="facebook">Facebook: <a href="http://www.facebook.com/pages/cgeo/297269860090">c:geo page</a></string>
  <string name="twitter">Twitter: <a href="http://twitter.com/android_gc">@android_GC</a></string>
  <string name="nutshellmanual">Manual: <a href="http://manual.cgeo.org/">c:geo in a Nutshell</a></string>
  <string name="contributors">\n
    · <a href="http://carnero.cc/">carnero</a> as the father of c:geo\n
    \n
    · 0xErnie (localization DE)\n
    · <a href="mailto:bazsy@freemail.hu">Balazs Szabo (Bazsy1983)</a> (loc. HU)\n
    · Bananeweizen (code, loc. DE)\n
    · blafoo (code, localization DE)\n
    · Bonemaro (tester)\n
    · BudBundi (localization DE, tester)\n
    · campbeb (code)\n
    · Charles (localization FR)\n
    · Denny (localization DA)\n
    · Eisbehr (code)\n
    · F. Coello (localization ES)\n
    · Filipe C. (code)\n
    · <a href="http://www.hunterthornsberry.com">Hunter275</a> (tester)\n
    · <a href="http://iirojappinen.com/">Iiro Jäppinen</a> (graphic)\n
    · inkantis (localization PL)\n
    · <a href="http://www.jaytech.cz/">Jan Žatecký</a> (graphic)\n
    · <a href="http://joachim-wilke.de/">JoWi24</a> (code)\n
    · <a href="http://github.com/koem">Karsten Priegnitz</a> (code, artwork computation)\n
    · <a href="http://www.geocaching.com/email/?guid=d11a3e3d-7db0-4d43-87f2-7893238844a6">Lineflyer</a> (tester, localization DE)\n
    · Ludovic Valente (localization FR)\n
    · marco-jacob (code, loc. DE)\n
    · MichielK (code, loc. NL)\n
    · mucek4 (code, open source project leader)\n
    · ncorreia (code, localization PT)\n
    · Pascal (localization NL)\n
    · Pavol Babinčák (code, loc. SK)\n
    · Peter (localization HU)\n
    · <a href="https://github.com/Portree-Kid">Portree Kid</a> (code)\n
    · Rainer S. (code)\n
    · Ray (code, loc. JA)\n
    · <a href="http://seromenho.com/">Ricardo Seromenho</a> (localization PT)\n
    · RoadRunner- (code, loc. DE)\n
    · <a href="http://www.blueskysoftware.it/">RomNexus6</a> (localization IT)\n
    · <a href="http://www.sammyshp.de/">SammysHP</a> (code, localization DE)\n
    · <a href="http://www.rfc1149.net/sam.html">Samuel Tardieu</a> (code, localization FR)\n
    · serenity (localization DE)\n
    · Shan, a.k.a. ShakurNO (localization NO)\n
    · Shizo87 (tester)\n
    · stephanme/Geoteufel (code)\n
    · thiasB (code, loc. DE EN)\n
    · YraFyra (code, loc. SV)\n
    · zenobios (code, loc. DE EN)\n
    \n
    · <a href="http://code.google.com/p/mapsforge/">Mapsforge</a> (OSM-rendering)\n
    · <a href="http://thenounproject.com/">The Noun Project</a> (basis for attribute icons)\n
    · <a href="http://commons.apache.org/">The Apache Commons Project</a>\n
    · <a href="http://androidicons.com/">Android Icons</a> (<a href="https://creativecommons.org/licenses/by/3.0/">CC-BY 3.0</a>)\n
    · <a href="http://rrze-icon-set.berlios.de/index.html">RRZE Icon set</a> (<a href="http://creativecommons.org/licenses/by-sa/3.0/">CC-BY-SA 3.0</a>)\n
  </string>
  <string name="changelog">\n
    <b>Next release</b>\n\n
    <b>New Features/Functions:</b>\n
    · Sort by found date in lists\n
    · Title of archived caches now shown in red\n
    · Display cache size and D/T-rating in compass\n
    \n
    <b>Bugfixing:</b>\n
    · Show as list from live map corrected to display the correct caches\n
    · GPX import/export compatability improvements\n
    · Use last known location on startup\n
     \n
    <a href="https://github.com/cgeo/c-geo-opensource/issues?milestone=7&amp;state=closed">Detailed list of all changes</a>\n
    \n
    <b>Known Limitations/Bugs:</b>\n
    · Live map:\n
      Approximated coords due to limitations on the GC-website\n
      Be aware: If navigation is started directly from live map it may also use the approximated coords!\n
      In fast mode the cache type might be wrong in rare cases\n
      Fast mode only detectes Tradi, Multi, Mystery, Event caches\n
      On low zoom owned/found caches may not be hidden anymore\n
    · Other:\n
      Log images with huge size cause a long loading time\n\n\n
    <b>Old releases</b>\n
    · Please refer to the release notes on the <a href="http://www.cgeo.org">c:geo-website</a>.\n
    \n</string>
</resources>