<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout style="@style/action_bar" >

        <ImageView
            style="@style/action_bar_action"
            android:onClick="goHome" />

        <View style="@style/action_bar_separator" />

        <TextView style="@style/action_bar_title" />
    </LinearLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="3dip" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="10dip"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_marginTop="10dip"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="200dip"
                    android:layout_height="200dip"
                    android:layout_gravity="center"
                    android:layout_margin="10dip"
                    android:gravity="center"
                    android:scaleType="fitXY"
                    android:src="@drawable/cgeo_logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:layout_marginTop="5dip"
                    android:text="@string/quote" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginBottom="5dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginRight="10dip"
                    android:text="@string/powered_by" />
            </LinearLayout>

            <RelativeLayout style="@style/separator_horizontal_layout" >

                <View style="@style/separator_horizontal" />

                <TextView
                    style="@style/separator_horizontal_headline"
                    android:text="@string/about_donate" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/donation_more"
                    style="@style/Button.Large"
                    android:layout_width="280dip"
                    android:lines="2"
                    android:onClick="donateMore"
                    android:singleLine="false"
                    android:text="@string/about_donation_more" />
            </LinearLayout>

            <RelativeLayout style="@style/separator_horizontal_layout" >

                <View style="@style/separator_horizontal" />

                <TextView
                    style="@style/separator_horizontal_headline"
                    android:text="@string/about_detail" />
            </RelativeLayout>

            <TextView
                android:id="@+id/support"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="false"
                android:onClick="support"
                android:text="@string/support" />

            <TextView
                android:id="@+id/website"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="false"
                android:onClick="website"
                android:text="@string/website" />

            <TextView
                android:id="@+id/facebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="false"
                android:onClick="facebook"
                android:text="@string/facebook" />

            <TextView
                android:id="@+id/twitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="false"
                android:onClick="twitter"
                android:text="@string/twitter" />

            <TextView
                android:id="@+id/nutshellmanual"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dip"
                android:clickable="true"
                android:focusable="true"
                android:linksClickable="false"
                android:onClick="nutshellmanual"
                android:text="@string/nutshellmanual" />

            <RelativeLayout style="@style/separator_horizontal_layout" >

                <View style="@style/separator_horizontal" />

                <TextView
                    style="@style/separator_horizontal_headline"
                    android:text="@string/about_changelog" />
            </RelativeLayout>

            <TextView
                android:id="@+id/changelog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/changelog"
                android:textSize="@dimen/textsize_small" />

            <RelativeLayout style="@style/separator_horizontal_layout" >

                <View style="@style/separator_horizontal" />

                <TextView
                    style="@style/separator_horizontal_headline"
                    android:text="@string/about_contributors" />
            </RelativeLayout>

            <TextView
                android:id="@+id/contributors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:linksClickable="true"
                android:text="@string/contributors" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>